[gd_scene load_steps=16 format=2]

[ext_resource path="res://map/wrap_area.gd" type="Script" id=1]
[ext_resource path="res://map/tilemap.tscn" type="PackedScene" id=3]
[ext_resource path="res://map/goalzone.tscn" type="PackedScene" id=7]
[ext_resource path="res://frogger/frogger.tscn" type="PackedScene" id=8]
[ext_resource path="res://map/level.gd" type="Script" id=13]
[ext_resource path="res://asset/font/OptionC_UpheavalPro.tres" type="DynamicFontData" id=14]
[ext_resource path="res://asset/texture/white_pixel.png" type="Texture" id=15]
[ext_resource path="res://asset/texture/life_texture.tres" type="Texture" id=16]
[ext_resource path="res://HUD/message.tscn" type="PackedScene" id=17]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 112, 64 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 120, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 128, 128 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 144 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 14 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 120, 8 )

[node name="level" type="Node2D"]
script = ExtResource( 13 )

[node name="goalzone" parent="." instance=ExtResource( 7 )]

[node name="tiles" parent="." instance=ExtResource( 3 )]

[node name="offset_green" parent="tiles" instance=ExtResource( 3 )]
position = Vector2( 0, -8 )
tile_data = PoolIntArray( 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0 )

[node name="solid_ground" type="Area2D" parent="."]
position = Vector2( -112, 280 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="solid_ground"]
visible = false
position = Vector2( 224, -88 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="solid_ground"]
position = Vector2( 224, -240 )
shape = SubResource( 5 )

[node name="wrap_area" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wrap_area"]
position = Vector2( 112, 128 )
shape = SubResource( 3 )

[node name="kill_zone" type="Area2D" parent="."]
collision_layer = 9
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="kill_zone"]
position = Vector2( -32, 128 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="kill_zone"]
position = Vector2( 256, 128 )
shape = SubResource( 4 )

[node name="lanes" type="Node2D" parent="."]

[node name="frogger" parent="." groups=["player"] instance=ExtResource( 8 )]
position = Vector2( 120, 232 )

[node name="spawn_point" type="Node2D" parent="."]
position = Vector2( 120, 232 )

[node name="time_label" type="Label" parent="."]
margin_left = 184.0
margin_top = 248.0
margin_right = 223.0
margin_bottom = 258.0
custom_fonts/font = SubResource( 6 )
text = "TIME"

[node name="lives_label" type="Label" parent="."]
margin_left = 16.0
margin_top = 240.0
margin_right = 55.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 6 )
text = "x2"
valign = 1

[node name="message" parent="." instance=ExtResource( 17 )]
position = Vector2( 112, 140 )

[node name="time_bar" type="TextureProgress" parent="."]
margin_left = 64.0
margin_top = 248.0
margin_right = 184.0
margin_bottom = 256.0
max_value = 120.0
step = 2.0
value = 120.0
texture_progress = SubResource( 7 )
fill_mode = 1
tint_progress = Color( 0.721569, 0.643137, 0.00392157, 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 8, 248 )
texture = ExtResource( 16 )

[connection signal="goal" from="goalzone" to="." method="_on_goalzone_goal"]
[connection signal="level_completed" from="goalzone" to="." method="_on_goalzone_level_completed"]
[connection signal="area_exited" from="wrap_area" to="wrap_area" method="_on_wrap_area_area_exited"]
[connection signal="value_changed" from="time_bar" to="." method="_on_time_bar_value_changed"]
